tests/it/snapshots/it__document_symbol__equation_flat.snap
---
source: tests/it/document_symbol.rs
assertion_line: 170
expression: server.find_document_symbols(uri)?
---
[
  {
    "name": "Equation (1)",
    "kind": 14,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 4,
          "character": 0
        },
        "end": {
          "line": 6,
          "character": 14
        }
      }
    }
  },
  {
    "name": "Equation",
    "kind": 14,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 8,
          "character": 0
        },
        "end": {
          "line": 10,
          "character": 14
        }
      }
    }
  },
  {
    "name": "Equation",
    "kind": 14,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 12,
          "character": 0
        },
        "end": {
          "line": 14,
          "character": 14
        }
      }
    }
  }
]
