tests/it/snapshots/it__document_symbol__section_flat.snap
---
source: tests/it/document_symbol.rs
assertion_line: 342
expression: server.find_document_symbols(uri)?
---
[
  {
    "name": "Foo",
    "kind": 2,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 4,
          "character": 0
        },
        "end": {
          "line": 4,
          "character": 13
        }
      }
    }
  },
  {
    "name": "2 Bar",
    "kind": 2,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 6,
          "character": 0
        },
        "end": {
          "line": 8,
          "character": 31
        }
      }
    }
  },
  {
    "name": "Baz",
    "kind": 2,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 8,
          "character": 0
        },
        "end": {
          "line": 8,
          "character": 31
        }
      }
    }
  }
]
