tests/it/snapshots/it__document_symbol__theorem_flat.snap
---
source: tests/it/document_symbol.rs
assertion_line: 436
expression: server.find_document_symbols(uri)?
---
[
  {
    "name": "Lemma 1 (Foo)",
    "kind": 13,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 6,
          "character": 0
        },
        "end": {
          "line": 8,
          "character": 11
        }
      }
    }
  },
  {
    "name": "Lemma 2",
    "kind": 13,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 10,
          "character": 0
        },
        "end": {
          "line": 12,
          "character": 11
        }
      }
    }
  },
  {
    "name": "Lemma",
    "kind": 13,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 14,
          "character": 0
        },
        "end": {
          "line": 16,
          "character": 11
        }
      }
    }
  },
  {
    "name": "Lemma (Qux)",
    "kind": 13,
    "deprecated": false,
    "location": {
      "uri": "http://www.example.com/main.tex",
      "range": {
        "start": {
          "line": 18,
          "character": 0
        },
        "end": {
          "line": 20,
          "character": 11
        }
      }
    }
  }
]
